--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,28 +5,32 @@
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "purpose" : "maskable"
     },
     {
       "src": "logo_164.png",
       "type": "image/png",
-      "sizes": "164x164"
+      "sizes": "164x164",
+      "purpose" : "any"
     },
     {
       "src": "logo_192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose" : "any"
     },
     {
       "src": "logo_461.png",
       "type": "image/png",
-      "sizes": "461x461"
+      "sizes": "461x461",
+      "purpose" : "any"
     },
     {
       "src": "logo_348.png",
       "type": "image/png",
       "sizes": "348x348",
-      "purpose" : "maskable"
+      "purpose" : "any"
     }
   ],
   "start_url": ".",
