--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,9 @@
   },
   "hosting": {
     "public": "build",
+    "headers": [
+      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
